--- a/assets/css/src/base.scss
+++ b/assets/css/src/base.scss
@@ -3,3 +3,7 @@
 @import "breakpoint_mixin";
 
 @import "common";
+@import "header";
+@import "article";
+
+// background-image: url(&quot;https://static.wixstatic.com/media/84770f_47ddf0de8fff4caf8c88bdee03162b67~mv2.png/v1/fill/w_300,h_300,al_c,q_85/84770f_47ddf0de8fff4caf8c88bdee03162b67~mv2.webp&quot;);"
