--- a/assets/css/src/common.scss
+++ b/assets/css/src/common.scss
@@ -5,3 +5,82 @@ $tablet: max-width 768px;
 $laptop: max-width 1024px;
 $laptopL: max-width 1440px;
 $fourK: max-width 2560px;
+
+$black: #06101A;
+$textmain: #BEAC74;
+
+body{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: red;
+}
+
+nav{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.width-container{
+    width:80%;
+    display: flex;
+    justify-content: center;
+}
+
+a{
+    line-height: 60px;
+    text-align: center;
+    font-size: 17px;
+    color: $textmain;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-weight: 100;
+    transition: 0.25s ease-in-out;
+}
+
+h1{
+    line-height: 27px;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 1mm;
+    color: $textmain;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-weight: 100;
+}
+h4{
+    line-height: 27px;
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 2mm;
+    color: $textmain;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-weight: 100;
+}
+
+h2{
+    display: block;
+    padding-left: 3mm;
+    margin-top: 20px;
+    line-height: 90px;
+    text-align: center;
+    font-size: 85px;
+    letter-spacing: 5.4mm;
+    color: white;
+    font-family: 'Rochester', cursive;
+    font-weight: 100;
+}
+h3{
+    line-height: 75px;
+    text-align: center;
+    font-size: 70px;
+    letter-spacing: 3mm;
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
+}
+
+main{
+    width: 100%;
+    height: 100%;
+}
