--- a/assets/css/src/_article.scss
+++ b/assets/css/src/_article.scss
@@ -1,3 +1,5 @@
+
+
 article{
     height: 800px;
     width: 100%;
@@ -10,7 +12,7 @@ article{
     .main-box{
         height: 450px;
         width: 370px;
-        background-color: black;
+        background-color: $black;
         display:flex;
         justify-content: center;
         align-items: center;
@@ -32,3 +34,6 @@ article{
         }
     }
 }
+
+
+
