--- a/assets/css/src/_article.scss
+++ b/assets/css/src/_article.scss
@@ -3,9 +3,11 @@
 article{
     height: 800px;
     width: 100%;
-    background-image: url("../images/picture1.jpg");
-    background-position: center;
-    background-size: cover;
+    // background-image: url("../images/picture1.jpg");
+    // background-attachment: fixed;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover; 
     display: flex;
     justify-content: center;
     align-items: center;
