--- a/assets/css/src/_section.scss
+++ b/assets/css/src/_section.scss
@@ -5,13 +5,6 @@
     margin-top: 100px;
 }
 
-.nomargin{
-    margin-top: 0px;
-}
-
-.marginright{
-    margin-right: 50px;
-}
 
 .reverse{
     flex-direction: row-reverse;
@@ -20,6 +13,8 @@
 .row{
     flex-direction: row;
 }
+
+
 
 section{
     height: 700px;
@@ -90,6 +85,44 @@ section{
             left: 30px;
             // transform: translate(-25px, 50px);
         }
+        form{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: flex-start;
+            select{
+                box-sizing: border-box;
+                padding-left: 20px;
+                padding-right: 20px;
+                width: 300px;
+                height: 40px;
+                background-color: $black;
+                margin-bottom: 20px;
+                border: 1px solid white;
+                font-family: 'Barlow Semi Condensed', sans-serif;
+                font-weight: 100;
+                font-size: 16px;
+                color: white;
+            }
+            input{
+                width: 300px;
+                height: 40px;
+                background-color: $textmain;
+                border: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-family: 'Barlow Semi Condensed', sans-serif;
+                font-weight: 100;
+                letter-spacing: 0.3mm;
+            }
+            .margintop{
+                margin-top: 20px;
+            }
+        }
+    }
+    .justifycenter{
+        justify-content: center;
     }
     .widthboxend{
         display: flex;
