--- a/assets/css/src/common.scss
+++ b/assets/css/src/common.scss
@@ -9,6 +9,17 @@ $fourK: max-width 2560px;
 $black: #06101A;
 $textmain: #BEAC74;
 
+.nomargin{
+    margin-top: 0px;
+}
+
+.marginright{
+    margin-right: 50px;
+}
+
+
+
+
 body{
     display: flex;
     justify-content: center;
@@ -80,6 +91,7 @@ h2{
     font-family: 'Rochester', cursive;
     font-weight: 100;
 }
+
 h3{
     line-height: 75px;
     text-align: center;
